--- a/southern-region-trivia.html
+++ b/southern-region-trivia.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Southern Region Trivia</title>
+    <title>Southern Region Trivia - Belize Music Master: Test Your Knowledge of Garifuna History and Culture</title>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js"></script>
@@ -165,8 +165,7 @@
 
         </main> 
 
-        <aside> 
-            <!-- Ensure the correct path to the image -->
+        <aside>
             <img id="read-main-text" src="images/southern-map.png" alt="Click to read the main content" title="Hi, Click on the map to start reading or to stop reading." onclick="toggleSpeech('trivia-container')" />
         </aside> 
     </div>
