--- a/southern-rural-region-examples.html
+++ b/southern-rural-region-examples.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Southern Rural Region</title>
+    <title>Southern Rural Region - Belize Music Master: Explore the Deer Dance Example</title>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js"></script>
@@ -34,21 +34,20 @@
                 <a href="southern-rural-region-trivia.html" class="tab">Trivia</a>
             </nav>
             <section id="content-area">
-            <h4>Example:</h4>           
-            <h5>1. Deer Dance</h5>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/_GeOdW1Ao0w" title="Deer Dance" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<hr>
+                <h4>Example:</h4>           
+                <h5>1. Deer Dance</h5>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/_GeOdW1Ao0w" title="Deer Dance" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <hr>
 
-<br />
-            
-            <div style="text-align: right;">
-                <a href="southern-rural-region-trivia.html" class="pill-button">CONTINUE TO TRIVIA</a>
-            </div>
+                 <br />
+                
+                <div style="text-align: right;">
+                    <a href="southern-rural-region-trivia.html" class="pill-button">CONTINUE TO TRIVIA</a>
+                </div>
             </section>
         </main> 
 
-        <aside> 
-            <!-- Ensure the correct path to the image -->
+        <aside>
             <img id="read-main-text" src="images/south-rural-map.png" alt="Click to read the main content" title="Hi, Click on the map to start reading or to stop reading." onclick="toggleSpeech('content-area')" /> 
         </aside> 
     </div>
