--- a/southern-rural-region.html
+++ b/southern-rural-region.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Southern Rural Region</title>
+    <title>Southern Rural Region - Belize Music Master: Discover Maya Heritage and Culture</title>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js"></script>
@@ -35,29 +35,28 @@
             </nav>
             <section id="content-area">
 
-            <h4>Brief History:</h4>           
-            <p>
-                Back in 1883, the brave Ketchi and Mopan Mayas left Guatemala to escape persecution,
-                seeking a new beginning and a safe haven. Their journey was marked by hardship and
-                determination as they navigated rugged terrains and unfamiliar landscapes. After
-                arriving in Belize, these courageous families established the vibrant village of San
-                Antonio in Toledo. Here, they built a close-knit community that held fast to their
-                traditions while adapting to new surroundings. Over time, San Antonio became a beacon
-                of Maya heritage, preserving ancient customs, language, and rituals that have been
-                passed down through generations. Today, the legacy of the Ketch and Mopan Mayas is
-                celebrated through colorful festivals, communal gatherings, and the everyday lives of
-                the villagers. Their story is a powerful reminder of resilience, unity, and the enduring
-                strength of cultural identity that continues to inspire us all.
-            </p>
-            
-            <div style="text-align: right;">
-                <a href="southern-rural-region-music.html" class="pill-button">CONTINUE TO MUSIC</a>
-            </div>
+                <h4>Brief History:</h4>           
+                <p>
+                    Back in 1883, the brave Ketchi and Mopan Mayas left Guatemala to escape persecution,
+                    seeking a new beginning and a safe haven. Their journey was marked by hardship and
+                    determination as they navigated rugged terrains and unfamiliar landscapes. After
+                    arriving in Belize, these courageous families established the vibrant village of San
+                    Antonio in Toledo. Here, they built a close-knit community that held fast to their
+                    traditions while adapting to new surroundings. Over time, San Antonio became a beacon
+                    of Maya heritage, preserving ancient customs, language, and rituals that have been
+                    passed down through generations. Today, the legacy of the Ketch and Mopan Mayas is
+                    celebrated through colorful festivals, communal gatherings, and the everyday lives of
+                    the villagers. Their story is a powerful reminder of resilience, unity, and the enduring
+                    strength of cultural identity that continues to inspire us all.
+                </p>
+                
+                <div style="text-align: right;">
+                    <a href="southern-rural-region-music.html" class="pill-button">CONTINUE TO MUSIC</a>
+                </div>
             </section>
         </main> 
 
         <aside> 
-            <!-- Ensure the correct path to the image -->
             <img id="read-main-text" src="images/south-rural-map.png" alt="Click to read the main content" title="Hi, Click on the map to start reading or to stop reading." onclick="toggleSpeech('content-area')" /> 
         </aside> 
     </div>
