--- a/central-region-music.html
+++ b/central-region-music.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Central Region</title>
+    <title>Central Region - Belize Music Master: Discover the Vibrant Rhythms of Soca and Calypso</title>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js"></script>
@@ -34,28 +34,27 @@
                 <a href="central-region-trivia.html" class="tab">Trivia</a>
             </nav>
             <section id="content-area">
-            <h4>Music:</h4>           
-            <p>
-                In the Central region the beats of Soca and calypso rhythms are the preferred genres.
-                These vibrant rhythms fill the air during Belize City's lively parades every September,
-                creating an atmosphere of pure jubilation. Let the music lift your spirits and carry you
-                along on this unforgettable journey!<br />
-                Instruments typically used in playing these genres are:
-                <ol>
-                    <li>the guitar</li>
-                    <li>various wind instruments like the trumpet, trombone and saxophone</li>
-                    <li>drums</li>
-                    <li>steel pan</li>
-                </ol>
-            
-            <div style="text-align: right;">
-                <a href="central-region-examples.html" class="pill-button">CONTINUE TO EXAMPLES</a>
-            </div>
-        </section>
+                <h4>Music:</h4>           
+                <p>
+                    In the Central region the beats of Soca and calypso rhythms are the preferred genres.
+                    These vibrant rhythms fill the air during Belize City's lively parades every September,
+                    creating an atmosphere of pure jubilation. Let the music lift your spirits and carry you
+                    along on this unforgettable journey!<br />
+                    Instruments typically used in playing these genres are:
+                    <ol>
+                        <li>the guitar</li>
+                        <li>various wind instruments like the trumpet, trombone and saxophone</li>
+                        <li>drums</li>
+                        <li>steel pan</li>
+                    </ol>
+                
+                <div style="text-align: right;">
+                    <a href="central-region-examples.html" class="pill-button">CONTINUE TO EXAMPLES</a>
+                </div>
+            </section>
         </main> 
 
-        <aside> 
-            <!-- Ensure the correct path to the image -->
+        <aside>
             <img id="read-main-text" src="images/central-map.png" alt="Click to read the main content" title="Hi, Click on the map to start reading or to stop reading." onclick="toggleSpeech('content-area')" />
         </aside> 
     </div>
