--- a/central-region.html
+++ b/central-region.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Central Region</title>
+    <title>Central Region - Belize Music Master: Discover the History and Cultural Roots</title>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js"></script>
@@ -35,30 +35,29 @@
             </nav>
 
             <section id="content-area">
-            <h4>Brief History:</h4>           
-            <p>
-                Welcome to the Central Region of Belize—a place where history and adventure come
-                together.<br />
-                The Central Region is home to the capital city, Belmopan, and the largest city, Belize.
-                Back in the late 1710s, brave British baymen set up their homes along our coasts. Due to
-                its lush and rich jungle, logwood and mahogany were extracted and exported to Europe,
-                providing economic value to its settlers. One of the most important chapters in our
-                history is the battle of St. George’s Caye, which occurred in September 1798. In this
-                battle, the Baymen, along with the slaves, defeated the Spaniards in a naval battle won by
-                navigating the shallow channels around the cayes.
-                This region is mainly populated with Creoles, who are the result of Baymen and African
-                slaves. Linkage to the English-speaking Caribbean islands is very strong, and this linkage
-                influences the music of this region.
-            </p>
-            
-            <div style="text-align: right;">
-                <a href="central-region-music.html" class="pill-button">CONTINUE TO MUSIC</a>
-            </div>
-        </section>
+                <h4>Brief History:</h4>           
+                <p>
+                    Welcome to the Central Region of Belize—a place where history and adventure come
+                    together.<br />
+                    The Central Region is home to the capital city, Belmopan, and the largest city, Belize.
+                    Back in the late 1710s, brave British baymen set up their homes along our coasts. Due to
+                    its lush and rich jungle, logwood and mahogany were extracted and exported to Europe,
+                    providing economic value to its settlers. One of the most important chapters in our
+                    history is the battle of St. George’s Caye, which occurred in September 1798. In this
+                    battle, the Baymen, along with the slaves, defeated the Spaniards in a naval battle won by
+                    navigating the shallow channels around the cayes.
+                    This region is mainly populated with Creoles, who are the result of Baymen and African
+                    slaves. Linkage to the English-speaking Caribbean islands is very strong, and this linkage
+                    influences the music of this region.
+                </p>
+                
+                <div style="text-align: right;">
+                    <a href="central-region-music.html" class="pill-button">CONTINUE TO MUSIC</a>
+                </div>
+            </section>
         </main> 
 
-        <aside> 
-            <!-- Ensure the correct path to the image -->
+        <aside>
             <img id="read-main-text" src="images/central-map.png" alt="Click to read the main content" title="Hi, Click on the map to start reading or to stop reading." onclick="toggleSpeech('content-area')" />
         </aside> 
     </div>
