--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Belize Music Master</title>
+	<title>Rhythms of Belize: A Musical Journey with Belize Music Master</title>
 	<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/main.js" defer></script>
