--- a/rural-region.html
+++ b/rural-region.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Belize Rural Region</title>
+    <title>Rural Region - Belize Music Master: Discover the History of Gales Point Manatee</title>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js"></script>
@@ -33,29 +33,29 @@
                 <a href="rural-region-examples.html" class="tab">Examples</a>
                 <a href="rural-region-trivia.html" class="tab">Trivia</a>
             </nav>
-<section id="content-area">
-            <h4>Brief History:</h4>           
-            <p>
-                Let me take you on a quick journey through the story of Gales Point Manatee which is
-                one of the villages in Belize Rural — also known as Manatee village.<br />
-                Nestled in the serene Southern Lagoon, Gales Point Manatee began as an early maroon
-                community. This means it was founded by brave souls—ex-enslaved people who chose
-                freedom over oppression by escaping the control of colonial slave masters. They sought
-                a place to live independently and built self-sufficient communities in the hinterlands.
-                Around the late 1700s and early 1800s, ex-enslaved folks from nearby areas like the
-                Sibun River, Runaway Creek, Mullins River, and Main River came together here to create
-                a new beginning. Their legacy of resilience and hope still echoes in our region today.
-                Come along and feel the spirit of freedom in every ripple of the Southern Lagoon!
-            </p>
             
-            <div style="text-align: right;">
-                <a href="rural-region-music.html" class="pill-button">CONTINUE TO MUSIC</a>
-            </div>
+            <section id="content-area">
+                <h4>Brief History:</h4>           
+                <p>
+                    Let me take you on a quick journey through the story of Gales Point Manatee which is
+                    one of the villages in Belize Rural — also known as Manatee village.<br />
+                    Nestled in the serene Southern Lagoon, Gales Point Manatee began as an early maroon
+                    community. This means it was founded by brave souls—ex-enslaved people who chose
+                    freedom over oppression by escaping the control of colonial slave masters. They sought
+                    a place to live independently and built self-sufficient communities in the hinterlands.
+                    Around the late 1700s and early 1800s, ex-enslaved folks from nearby areas like the
+                    Sibun River, Runaway Creek, Mullins River, and Main River came together here to create
+                    a new beginning. Their legacy of resilience and hope still echoes in our region today.
+                    Come along and feel the spirit of freedom in every ripple of the Southern Lagoon!
+                </p>
+                
+                <div style="text-align: right;">
+                    <a href="rural-region-music.html" class="pill-button">CONTINUE TO MUSIC</a>
+                </div>
             </section>
         </main> 
 
         <aside> 
-            <!-- Ensure the correct path to the image -->
            <img id="read-main-text" src="images/rural-map1.png" alt="Click to read the main content" title="Hi, Click on the map to start reading or to stop reading." onclick="toggleSpeech('content-area')" />
         </aside> 
     </div>
