--- a/southern-region-examples.html
+++ b/southern-region-examples.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Southern Region</title>
+    <title>Southern Region - Belize Music Master: Explore Punta and Paranda Examples</title>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js"></script>
@@ -34,24 +34,23 @@
                 <a href="southern-region-trivia.html" class="tab">Trivia</a>
             </nav>
             <section id="content-area">
-            <h4>Examples:</h4>           
-            <p>
-                <h5>1. Punta</h5>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wmxujd_6W8Q" title="Punta" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <hr>
-                <h5>2. Paranda</h5>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wTRgdLjmPjo" title="Paranda" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </p>
-<br />
-            
-            <div style="text-align: right;">
-                <a href="southern-region-trivia.html" class="pill-button">CONTINUE TO TRIVIA</a>
-            </div>
-     </section>
+                <h4>Examples:</h4>           
+                <p>
+                    <h5>1. Punta</h5>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wmxujd_6W8Q" title="Punta" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <hr>
+                    <h5>2. Paranda</h5>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wTRgdLjmPjo" title="Paranda" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </p>
+                <br />
+                
+                <div style="text-align: right;">
+                    <a href="southern-region-trivia.html" class="pill-button">CONTINUE TO TRIVIA</a>
+                </div>
+            </section>
         </main> 
 
-        <aside> 
-            <!-- Ensure the correct path to the image -->
+        <aside>
             <img id="read-main-text" src="images/southern-map.png" alt="Click to read the main content" title="Hi, Click on the map to start reading or to stop reading." onclick="toggleSpeech('content-area')" />
         </aside> 
     </div>
