error in link norther-region

--- a/northern-region.html
+++ b/northern-region.html
@@ -35,7 +35,7 @@
 				<nav class="tabs">
 					<a href="#history" class="tab active">History</a>
 					<a href="northern-region-music.html" class="tab">Music</a>
-					<a href="northern-region-example.html" class="tab">Examples</a>
+					<a href="northern-region-examples.html" class="tab">Examples</a>
 					<a href="northern-region-trivia.html" class="tab">Trivia</a>
 				</nav>
 
